force-app/main/default/objects/Account/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Natural Stone</fullName>
            </value>
            <value>
                <fullName>Porcelain</fullName>
            </value>
            <value>
                <fullName>Quartz</fullName>
            </value>
            <value>
                <fullName>Sintered Stone</fullName>
            </value>
            <value>
                <fullName>Solid Surface</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>