force-app/main/default/objects/Account/fields/Merchandising_Materials__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Materials__c</fullName>
    <label>Merchandising Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Catalogues</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Stands</fullName>
            </value>
            <value>
                <fullName>Worktop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>