force-app/main/default/objects/Account/fields/NBK_Sample_Addresses__c.field-meta.xml
<CustomField>
    <fullName>NBK_Sample_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Account</label>
    <type>Checkbox</type>
</CustomField>