force-app/main/default/objects/Account/fields/Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Number_Id__c</fullName>
    <label>Number Id</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>