force-app/main/default/objects/Account/fields/Number_Of_Authorizations__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Authorizations__c</fullName>
    <label>Number Of Authorizations</label>
    <summaryForeignKey>Authorization__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>