force-app/main/default/objects/Account/fields/Number_Of_Projects__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Projects__c</fullName>
    <label>Number Of Projects</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>