force-app/main/default/objects/Account/fields/Opportunities_SAP_Errors__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_SAP_Errors__c</fullName>
    <description>Number of opportunities that could not be sent to SAP or are In Process of being sent</description>
    <label>Opportunities SAP Errors</label>
    <summaryFilterItems>
        <field>Opportunity.SAP_Status__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.SAP_Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>