force-app/main/default/objects/Account/fields/Opportunities_with_Errors__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_with_Errors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opportunities with Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>