force-app/main/default/objects/Account/fields/Other_account_classification__c.field-meta.xml
<CustomField>
    <fullName>Other_account_classification__c</fullName>
    <label>Other account classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>