force-app/main/default/objects/Account/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>