force-app/main/default/objects/Account/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential</label>
    <type>Checkbox</type>
</CustomField>