force-app/main/default/objects/Account/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <label>Profesional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>No Profesional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>