force-app/main/default/objects/Account/fields/Professional__c.field-meta.xml
<CustomField>
    <fullName>Professional__c</fullName>
    <label>Professional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>No Profesional</fullName>
                <default>true</default>
                <label>No Profesional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>