force-app/main/default/objects/Account/fields/Professional_check__c.field-meta.xml
<CustomField>
    <fullName>Professional_check__c</fullName>
    <formula>ISPICKVAL(Account_Classification__c, &apos;Architectural firm&apos;) || ISPICKVAL(Account_Classification__c, &apos;Building company&apos;) || ISPICKVAL(Account_Classification__c, &apos;Design-Build company&apos;) 
		|| ISPICKVAL(Account_Classification__c, &apos;Developer&apos;) || ISPICKVAL(Account_Classification__c, &apos;Distribuitor / 3rd party retailer/dealer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Professional check</label>
    <type>Checkbox</type>
</CustomField>