force-app/main/default/objects/Account/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>