force-app/main/default/objects/Account/fields/Public_FR__c.field-meta.xml
<CustomField>
    <fullName>Public_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shares the account with all FR</description>
    <inlineHelpText>Shares the account with all FR</inlineHelpText>
    <label>Public (FR)</label>
    <type>Checkbox</type>
</CustomField>