force-app/main/default/objects/Account/fields/Public_UK__c.field-meta.xml
<CustomField>
    <fullName>Public_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants read level access to all users in UK</description>
    <inlineHelpText>Grants read level access to all users in UK</inlineHelpText>
    <label>Public (UK)</label>
    <type>Checkbox</type>
</CustomField>