force-app/main/default/objects/Account/fields/RegisterUniqueId__c.field-meta.xml
<CustomField>
    <fullName>RegisterUniqueId__c</fullName>
    <description>Código único del registro, calculado por apex en el trigger, y que puede variar el formato dependiendo el país o lo que se decida. Actualmente es domain+postcode</description>
    <label>Register Unique Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>