force-app/main/default/objects/Account/fields/RT_Name_ANA_Form__c.field-meta.xml
<CustomField>
    <fullName>RT_Name_ANA_Form__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name ANA</label>
    <type>Text</type>
</CustomField>