force-app/main/default/objects/Account/fields/Sales_RelationShip_List__c.field-meta.xml
<CustomField>
    <fullName>Sales_RelationShip_List__c</fullName>
    <description>Listado de las Sociedes (Relaciones de Venta) que tiene esta Account, para la configuración de las Sharing Rules por Criteria.</description>
    <inlineHelpText>List of the Sales Relationships that this Account has for the configuration of the Sharing Rules by Criteria.</inlineHelpText>
    <label>NO USAR - Sales RelationShip List</label>
    <type>TextArea</type>
</CustomField>