force-app/main/default/objects/Account/fields/Sales_Rels_with_errors__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rels_with_errors__c</fullName>
    <label>Sales Rels with errors</label>
    <summaryFilterItems>
        <field>Sales_Relationship__c.Sap_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Relationship__c.Account_Org__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>