force-app/main/default/objects/Account/fields/Sales_Team_Available__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Team Available</label>
    <type>Checkbox</type>
</CustomField>