force-app/main/default/objects/Account/fields/SalesMaturity__c.field-meta.xml
<CustomField>
    <fullName>SalesMaturity__c</fullName>
    <description>Campo Rellenado en el Weekly event report , para decir como esá el contacto con el Account</description>
    <label>Sales Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOCONTACTED</fullName>
                <label>No contacted</label>
            </value>
            <value>
                <fullName>CONTACTED</fullName>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>DEVELOPMENT</fullName>
                <label>Development</label>
            </value>
            <value>
                <fullName>STUDYINGOPPS</fullName>
                <label>Studying Opportunities</label>
            </value>
            <value>
                <fullName>PRODUCING</fullName>
                <label>Producing</label>
            </value>
            <value>
                <fullName>FREEZED</fullName>
                <label>Stopped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>