force-app/main/default/objects/Account/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>SalesOffice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesOrgs__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>