force-app/main/default/objects/Account/fields/SalesOffice_Owner__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice_Owner__c</fullName>
    <formula>TEXT(Owner.Sales_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office Owner</label>
    <type>Text</type>
</CustomField>