force-app/main/default/objects/Account/fields/SalesOrg_Owner__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg_Owner__c</fullName>
    <formula>TEXT(Owner.Default_Sales_Organization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org Owner</label>
    <type>Text</type>
</CustomField>