force-app/main/default/objects/Account/fields/SalesOrgs__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgs__c</fullName>
    <label>SalesOrgs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company_List__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>