force-app/main/default/objects/Account/fields/SAP_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Id__c</fullName>
    <externalId>true</externalId>
    <label>SAP Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>