force-app/main/default/objects/Account/fields/SAP_id_formule__c.field-meta.xml
<CustomField>
    <fullName>SAP_id_formule__c</fullName>
    <formula>SAP_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP id (F)</label>
    <type>Text</type>
</CustomField>