force-app/main/default/objects/Account/fields/Showroom_Available__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Showroom Available</label>
    <type>Checkbox</type>
</CustomField>