force-app/main/default/objects/Account/fields/Showroom_Materials__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Materials__c</fullName>
    <label>Showroom Materials</label>
    <length>160</length>
    <type>Text</type>
</CustomField>