force-app/main/default/objects/Account/fields/Showrooms_They_Work_With__c.field-meta.xml
<CustomField>
    <fullName>Showrooms_They_Work_With__c</fullName>
    <label>Showrooms They Work With</label>
    <length>160</length>
    <type>Text</type>
</CustomField>