force-app/main/default/objects/Account/fields/SynchronizedWithDvs__c.field-meta.xml
<CustomField>
    <fullName>SynchronizedWithDvs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data validated</label>
    <type>Checkbox</type>
</CustomField>