force-app/main/default/objects/Account/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Team Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>