force-app/main/default/objects/Account/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <label>Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bridge Crane</fullName>
            </value>
            <value>
                <fullName>Bridge Disc</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>Edge Polisher</fullName>
            </value>
            <value>
                <fullName>Invisible joint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Suction Cups</fullName>
            </value>
            <value>
                <fullName>Waterjet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>