force-app/main/default/objects/Account/fields/Transformation_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Pricelist__c</fullName>
    <label>Transformation Pricelist</label>
    <length>160</length>
    <type>Text</type>
</CustomField>