force-app/main/default/objects/Account/fields/TypeCustomer__c.field-meta.xml
<CustomField>
    <fullName>TypeCustomer__c</fullName>
    <label>TypeCustomer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POTENCIAL</fullName>
                <default>true</default>
                <label>POTENCIAL</label>
            </value>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>TANDEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>