force-app/main/default/objects/Account/fields/TypeUpdated__c.field-meta.xml
<CustomField>
    <fullName>TypeUpdated__c</fullName>
    <label>TypeUpdated</label>
    <type>DateTime</type>
</CustomField>