force-app/main/default/objects/Account/fields/Updated_Type__c.field-meta.xml
<CustomField>
    <fullName>Updated_Type__c</fullName>
    <label>Updated Type</label>
    <type>DateTime</type>
</CustomField>