force-app/main/default/objects/Account/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account validated by support</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>