force-app/main/default/objects/Account/fields/Validated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Validated_Flag__c</fullName>
    <formula>IF( Validated__c = FALSE, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;verde&quot;,20,20), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;rojo&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validated Flag</label>
    <type>Text</type>
</CustomField>