force-app/main/default/objects/Account/fields/Validation_Time__c.field-meta.xml
<CustomField>
    <fullName>Validation_Time__c</fullName>
    <formula>IF( Validated__c  = FALSE,NOW()  - CreatedDate ,  NOW()  - CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time between created date and its validation</inlineHelpText>
    <label>Validation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>