force-app/main/default/objects/Account/recordTypes/Fabricator.recordType-meta.xml
<RecordType>
    <fullName>Fabricator</fullName>
    <active>true</active>
    <description>Form used for fabricators, stonemasons and craftsmen involved in product manufacturing</description>
    <label>Fabricator</label>
</RecordType>