force-app/main/default/objects/Account/recordTypes/Third_party_Retailer_Reseller.recordType-meta.xml
<RecordType>
    <fullName>Third_party_Retailer_Reseller</fullName>
    <active>true</active>
    <description>Form used for dealers and distribuitors of Porcelanosa products (B2B)</description>
    <label>Third party Retailer / Reseller</label>
</RecordType>