force-app/main/default/objects/Account/recordTypes/Trade_and_Specificators.recordType-meta.xml
<RecordType>
    <fullName>Trade_and_Specificators</fullName>
    <active>true</active>
    <description>Form used for trade specifications and other professionals involved in projects (B2B)</description>
    <label>Trade and Specificators</label>
</RecordType>