force-app/main/default/objects/Account/recordTypes/USAbusinessaccount.recordType-meta.xml
<RecordType>
    <fullName>USAbusinessaccount</fullName>
    <active>true</active>
    <label>USA Business Account</label>
</RecordType>