force-app/main/default/objects/Account/validationRules/ADDRESS_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>ADDRESS_ACCOUNT</fullName>
    <active>true</active>
    <description>Validates the account address</description>
    <errorConditionFormula>AND(
not($Permission.BypassValidationRulesCP),
  IsPersonAccount = false, 
  Potential__c = false,
  OR(
    ISBLANK(BillingPostalCode), 
    ISBLANK(BillingCity),
    ISPICKVAL(BillingCountryCode, &apos;&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Address in Account is required (Country, postcode and city)</errorMessage>
</ValidationRule>