force-app/main/default/objects/Account/validationRules/ADDRESS_PERSON_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>ADDRESS_PERSON_ACCOUNT</fullName>
    <active>true</active>
    <description>Validates person account&apos;s address</description>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,
  IsPersonAccount = true, 
  Potential__c = false,
  OR(
    ISBLANK(PersonMailingPostalCode), 
    ISBLANK(PersonMailingCity),
    ISPICKVAL(PersonMailingCountryCode, &apos;&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Address in Account is required (Country, postcode and city)</errorMessage>
</ValidationRule>