force-app/main/default/objects/Account/validationRules/BillingCountry_VATNumber_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingCountry_VATNumber_Required</fullName>
    <active>false</active>
    <description>Billing Country and VAT Number are required if record is not Person Account</description>
    <errorConditionFormula>AND(
 Potential__c = FALSE,
 IsPersonAccount = FALSE, 
 AND(
    ISBLANK(BillingCountry ),
    ISBLANK(VAT_Number__c ),
    SAP_Id__c = &apos;1&apos;
    )
)</errorConditionFormula>
    <errorMessage>Billing Country and VAT Number are required if record is not Person Account</errorMessage>
</ValidationRule>