force-app/main/default/objects/Account/validationRules/country_character.validationRule-meta.xml
<ValidationRule>
    <fullName>country_character</fullName>
    <active>false</active>
    <errorConditionFormula>NOT ( REGEX ( Country__c,&quot;[a-zA-Z ]*&quot; ))</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>No se puede introducir un campo erróneo.</errorMessage>
</ValidationRule>