force-app/main/default/objects/Account/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>false</active>
    <description>DELETE THIS ONE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
Country required for accounts except whe n potential is true</description>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,
  Potential__c = false,
  OR(
    AND( 
      IsPersonAccount = true , 
      ISPICKVAL(PersonMailingCountryCode  , &apos;&apos;) ), 
    AND( 
      IsPersonAccount = false, 
      ISPICKVAL(BillingCountryCode , &apos;&apos;)
    )
  )
)</errorConditionFormula>
    <errorMessage>Country is a required field</errorMessage>
</ValidationRule>