force-app/main/default/objects/Account/validationRules/Fabricator_required_for_reseller.validationRule-meta.xml
<ValidationRule>
    <fullName>Fabricator_required_for_reseller</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  CONTAINS($User.Username, &apos;loads.user&apos;) = false,ISPICKVAL(Account_Classification__c , &quot;Kitchen &amp; Bath store (XTONE only)&quot;) ,RT_Name_ANA_Form__c = &quot;Third party Retailer / Reseller&quot;,
   ISBLANK(Fabricator_1__c),ISBLANK(Fabricator_2__c) ,ISBLANK(Fabricator_3__c) ,ISBLANK(Fabricator_4__c) )</errorConditionFormula>
    <errorMessage>You must select in at least one Fabricator</errorMessage>
</ValidationRule>