force-app/main/default/objects/Account/validationRules/Franchise_type_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Franchise_type_required</fullName>
    <active>true</active>
    <description>El tipo de cliente (nacional o internacional) es obligatorio en un Brand/Franchise</description>
    <errorConditionFormula>AND(ISPICKVAL(Account_Classification__c, &quot;Brand/Chain/Franchise&quot;) = TRUE,  ISPICKVAL(Customer_Type__c, &quot;&quot;),  ISNEW() )</errorConditionFormula>
    <errorDisplayField>Customer_Type__c</errorDisplayField>
    <errorMessage>Type of Brand/Franchise must be filled</errorMessage>
</ValidationRule>