force-app/main/default/objects/Account/validationRules/Obligatorio_correo.validationRule-meta.xml
<ValidationRule>
    <fullName>Obligatorio_correo</fullName>
    <active>false</active>
    <description>Obligatorio correo cuando el RecordType es Customer, no Business Account</description>
    <errorConditionFormula>ISBLANK( PersonEmail ) &amp;&amp; RecordType.Name = &apos;Private Customer&apos;</errorConditionFormula>
    <errorMessage>El campo &apos;PersonEmail&apos; no puede quedar vacío</errorMessage>
</ValidationRule>