force-app/main/default/objects/Account/validationRules/pais_correcto.validationRule-meta.xml
<ValidationRule>
    <fullName>pais_correcto</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(CONTAINS(
&quot;AF:AX:AL:DZ:AS:AD:AO:AI:AQ:AG:AR:AM:&quot; &amp;
&quot;AW:AU:AZ:BS:BH:BD:BB:BY:BE:BZ:BJ:BM:BT:BO:&quot; &amp;
&quot;BA:BW:BV:BR:IO:BN:BG:BF:BI:KH:CM:CA:CV:KY:&quot; &amp;
&quot;CF:TD:CL:CN:CX:CC:CO:KM:CG:CD:CK:CR:CI:HR:&quot; &amp;
&quot;CU:CY:CZ:DK:DJ:DM:DO:EC:EG:SV:GQ:ER:EE:ET:FK:&quot; &amp;
&quot;FO:FJ:FI:FR:GF:PF:TF:GA:GM:GE:DE:GH:GI:GR:GL:&quot; &amp;
&quot;GD:GP:GU:GT:GG:GN:GW:GY:HT:HM:VA:HN:HK:HU:&quot; &amp;
&quot;IS:IN:ID:IR:IQ:IE:IM:IL:IT:JM:JP:JE:JO:KZ:KE:KI:&quot; &amp;
&quot;KP:KR:KW:KG:LA:LV:LB:LS:LR:LY:LI:LT:LU:MO:MK:&quot; &amp;
&quot;MG:MW:MY:MV:ML:MT:MH:MQ:MR:MU:YT:MX:FM:MD:MC:&quot; &amp;
&quot;MC:MN:ME:MS:MA:MZ:MM:MA:NR:NP:NL:AN:NC:NZ:NI:&quot; &amp;
&quot;NE:NG:NU:NF:MP:NO:OM:PK:PW:PS:PA:PG:PY:PE:PH:&quot; &amp;
&quot;PN:PL:PT:PR:QA:RE:RO:RU:RW:SH:KN:LC:PM:VC:WS:&quot; &amp;
&quot;SM:ST:SA:SN:RS:SC:SL:SG:SK:SI:SB:SO:ZA:GS:ES:&quot; &amp;
&quot;LK:SD:SR:SJ:SZ:SE:CH:SY:TW:TJ:TZ:TH:TL:TG:TK:&quot; &amp;
&quot;TO:TT:TN:TR:TM:TC:TV:UG:UA:AE:GB:US:UM:UY:UZ:&quot; &amp;
&quot;VU:VE:VN:VG:VI:WF:EH:YE:ZM:ZW&quot;&amp;
&quot;af:ax:al:dz:as:ad:ao:ai:aq:ag:ar:am:&quot; &amp;
&quot;aw:au:az:bs:bh:bd:bb:by:be:bz:bj:bm:bt:bo:&quot; &amp;
&quot;ba:bw:bv:br:io:bn:bg:bf:bi:kh:cm:ca:cv:ky:&quot; &amp;
&quot;cf:td:cl:cn:cx:cc:co:km:cg:cd:ck:cr:ci:hr:&quot; &amp;
&quot;cu:cy:cz:dk:dj:dm:do:ec:eg:sv:gq:er:ee:et:fk:&quot; &amp;
&quot;fo:fj:fi:fr:gf:pf:tf:ga:gm:ge:de:gh:gi:gr:gl:&quot; &amp;
&quot;gd:gp:gu:gt:gg:gn:gw:gy:ht:hm:va:hn:hk:hu:&quot; &amp;
&quot;is:in:id:ir:iq:ie:im:il:it:jm:jp:je:jo:kz:ke:ki:&quot; &amp;
&quot;kp:kr:kw:kg:la:lv:lb:ls:lr:ly:li:lt:lu:mo:mk:&quot; &amp;
&quot;mg:mw:my:mv:ml:mt:mh:mq:mr:mu:yt:mx:fm:md:mc:&quot; &amp;
&quot;mc:mn:me:ms:ma:mz:mm:ma:nr:np:nl:an:nc:nz:ni:&quot; &amp;
&quot;ne:ng:nu:nf:mp:no:om:pk:pw:ps:pa:pg:py:pe:ph:&quot; &amp;
&quot;pn:pl:pt:pr:qa:re:ro:ru:rw:sh:kn:lc:pm:vc:ws:&quot; &amp;
&quot;sm:st:sa:sn:rs:sc:sl:sg:sk:si:sb:so:za:gs:es:&quot; &amp;
&quot;lk:sd:sr:sj:sz:se:ch:sy:tw:tj:tz:th:tl:tg:tk:&quot; &amp;
&quot;to:tt:tn:tr:tm:tc:tv:ug:ua:ae:gb:us:um:uy:uz:&quot; &amp;
&quot;vu:ve:vn:vg:vi:wf:eh:ye:zm:zw&quot;,
 Country__c ))</errorConditionFormula>
    <errorMessage>Código de país incorrecto</errorMessage>
</ValidationRule>