force-app/main/default/objects/Account/validationRules/Phone_Restrictions_UK.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Restrictions_UK</fullName>
    <active>false</active>
    <description>Restricciones de la validación del campo phone en UK</description>
    <errorConditionFormula>(BillingCountry = &apos;Germany&apos; ||
BillingCountry=&apos;United Kingdom&apos;) &amp;&amp;
LEN(Phone) != 11 &amp;&amp;
NOT(BEGINS(Phone, &apos;0&apos;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please write a valid format for the Phone field</errorMessage>
</ValidationRule>