force-app/main/default/objects/Account/validationRules/Postal_code_billing_CA.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_code_billing_CA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,NOT(ISBLANK(BillingPostalCode)),AND(ISPICKVAL(BillingCountryCode, &quot;CA&quot; ),
NOT(REGEX(BillingPostalCode, &apos;^([ABCEGHJKLMNPRSTVXY]\\d[ABCEGHJKLMNPRSTVWXYZ])\\ ({0,1}\\d[ABCEGHJKLMNPRSTVWXYZ]\\d)$&apos;))
))</errorConditionFormula>
    <errorMessage>Invalid CA post code for Account</errorMessage>
</ValidationRule>