force-app/main/default/objects/Account/validationRules/Postal_code_billing_CH.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_code_billing_CH</fullName>
    <active>true</active>
    <description>Invalid CH post code for Account</description>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,NOT(ISBLANK(BillingPostalCode)),AND(ISPICKVAL(BillingCountryCode, &quot;CH&quot; ),
NOT(REGEX(BillingPostalCode, &apos;^[1-9]\\d{3}$&apos;))
))</errorConditionFormula>
    <errorMessage>Invalid Swotzerland post code for Account</errorMessage>
</ValidationRule>