force-app/main/default/objects/Account/validationRules/Postal_code_billing_FR.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_code_billing_FR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,NOT(ISBLANK(BillingPostalCode)),AND(ISPICKVAL(BillingCountryCode, &quot;FR&quot; ), 
NOT(REGEX(BillingPostalCode,  &apos;^(F-)?\\d{5}$&apos;)) 
))</errorConditionFormula>
    <errorMessage>Invalid FR post code for Account</errorMessage>
</ValidationRule>