force-app/main/default/objects/Account/validationRules/Postal_code_billing_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_code_billing_US</fullName>
    <active>true</active>
    <description>Invalid US post code for Account</description>
    <errorConditionFormula>AND(CONTAINS($User.Username, &apos;loads.user&apos;) = false,NOT(ISBLANK(BillingPostalCode)),AND(ISPICKVAL(BillingCountryCode, &quot;US&quot; ),
NOT(REGEX(BillingPostalCode, &apos;^(\\d{5}(\\-\\d{4})?)?$&apos;))
))</errorConditionFormula>
    <errorMessage>Invalid US post code for Account</errorMessage>
</ValidationRule>